bug修改，样式优化，需求实现

--- a/pages/manage/manage.wxml
+++ b/pages/manage/manage.wxml
@@ -45,7 +45,7 @@
 
 		<!-- 菜单 -->
 		<view
-			class="ml20 mr20 mt40 bgColorWhite vw90 flex flexWarp borderBox pl20 pr20 pt20 pb20 color9E fz30 tc borderRadius16 shadow"
+			class="ml20 mr20 mt40 bgColorWhite vw90 flex jcsb flexWarp borderBox pl20 pr20 pt20 pb20 color9E fz30 tc borderRadius16 shadow"
 			style="transform: translateY(-60%);">
 			<view class="{{item.index===1?'':'ml18'}}" wx:for="{{pageList}}" wx:for-item="item" wx:key="title"
 				data-path="{{item.path}}" bindtap="toWitchPage">
