--- a/pages/quotedPriceCreate/quotedPriceCreate.scss
+++ b/pages/quotedPriceCreate/quotedPriceCreate.scss
@@ -78,5 +78,9 @@
     font-size: 60rpx!important;
     background-color: rgba(0, 0, 0, 1);
     transform: translateX(10px) scale(0.7) translateY(-7px)!important;
-  }
+	}
+	
+	.nopadding{
+		padding: 0;
+	}
 }
