--- a/pages/billingManagement/rawMaterialPurchaseOrder/rawMaterialPurchaseOrderDetail.wxml
+++ b/pages/billingManagement/rawMaterialPurchaseOrder/rawMaterialPurchaseOrderDetail.wxml
@@ -111,14 +111,22 @@
 						<view class="w40">{{ itemChild.material_color }}</view>
 					</view>
 					<view class="w50 flex">
-						<view class="w60 color6">数量</view>
-						<view class="w40">{{ itemChild.number }}{{ itemChild.unit }}</view>
+						<view class="w60 color6">属性</view>
+						<view class="w40">
+							{{ itemChild.attribute }}
+						</view>
 					</view>
 				</view>
 				<view class="flex mt10">
-					<view class="w30 color6">单价</view>
-					<view class="w70">
-						{{ itemChild.price }}元
+					<view class="w50 flex">
+						<view class="w60 color6">单价</view>
+						<view class="w40">
+							{{ itemChild.price }}元
+						</view>
+					</view>
+					<view class="w50 flex">
+						<view class="w60 color6">数量</view>
+						<view class="w40">{{ itemChild.number }}{{ itemChild.unit }}</view>
 					</view>
 				</view>
 				<!-- <view class="flex mt10">
@@ -147,13 +155,13 @@
 		</view> -->
 	</view>
 
-	<view class="mt20 submit" style="position: fixed;bottom:5%;left:50%;transform: translateX(-50%);">
+	<view class="mt20 submit" style="position: fixed;bottom:3%;left:50%;transform: translateX(-50%);">
 		<view class="flex jcsa">
 			<van-button style="margin-left: 20px;" type="primary" size="small" bindtap="openCheck">审核订购单</van-button>
 		</view>
 	</view>
 
-	<view class="vh12"></view>
+	<view class="vh8"></view>
 
 	<l-mask show="{{showShenHe}}" center>
 		<view class='card' style="padding-bottom:0;max-height: 70vh;padding-top:0">
