--- a/pages/billingManagement/rawMaterialTransferOrder/rawMaterialTransferOrder.wxml
+++ b/pages/billingManagement/rawMaterialTransferOrder/rawMaterialTransferOrder.wxml
@@ -13,7 +13,7 @@
 
 	<scroll-view scroll-y class="vh80" bindscrolltolower="reqOrder">
 		<view style="content: ''; overflow: hidden;"></view>
-		<view wx:for="{{list}}" class="card flex">
+		<view wx:for="{{list}}" class="card flex" bindtap="toDetail" data-item="{{item}}">
 			<view class="w100 flex aic">
 				<view class="title w32">调取单号：</view>
 				<view>{{item.code}}</view>
