--- a/pages/billingManagement/rawMaterialTransferOrder/rawMaterialTransferOrderDetail.wxml
+++ b/pages/billingManagement/rawMaterialTransferOrder/rawMaterialTransferOrderDetail.wxml
@@ -1,8 +1,8 @@
-<!--pages/billingManagement/rawMaterialPlan/rawMaterialPlanDetail.wxml-->
-<view id="rawMaterialPlanDetail">
+<!--pages/billingManagement/rawMaterialTransferOrder/rawMaterialTransferOrderDetail.wxml-->
+<view id="rawMaterialPurchaseOrderDetail">
 	<nav-content>
 		<view slot="after">
-			<view>原料计划单详情</view>
+			<view>原料调取单详情</view>
 		</view>
 	</nav-content>
 
@@ -10,7 +10,7 @@
 	<view class="card fz28 por">
 		<view class="title">基础信息</view>
 		<view class="flex mt10">
-			<view class="w30 color6">系统计划单</view>
+			<view class="w30 color6">调取单号</view>
 			<view class="w70">{{info.code}}</view>
 		</view>
 		<view class="flex mt10">
@@ -21,27 +21,39 @@
 			</view>
 		</view>
 		<view class="flex mt10">
-			<view class="w30 color6">订单号</view>
+			<view class="w30 color6">关联订单</view>
 			<view class="w70">
 				{{info.order_code}}
 			</view>
 		</view>
 		<view class="flex mt10">
-			<view class="w30 color6">下单客户</view>
+			<view class="w30 color6">调取仓库</view>
 			<view class="w70">
-				{{info.client_name}}
+				{{info.store}}
 			</view>
 		</view>
 		<view class="flex mt10">
-			<view class="w30 color6">下单日期</view>
+			<view class="w30 color6">调取数量</view>
 			<view class="w70">
-				{{info.order_time}}
+				{{ info.total_number }}
 			</view>
 		</view>
 		<view class="flex mt10">
-			<view class="w30 color6">负责人/小组</view>
+			<view class="w30 color6">调取金额</view>
 			<view class="w70">
-				{{info.group_name}}
+				{{info.total_price}}
+			</view>
+		</view>
+		<view class="flex mt10">
+			<view class="w30 color6">入库数量</view>
+			<view class="w70">
+				{{info.total_push_number}}
+			</view>
+		</view>
+		<view class="flex mt10">
+			<view class="w30 color6">入库金额</view>
+			<view class="w70">
+				{{info.total_push_price}}
 			</view>
 		</view>
 		<van-image wx:if="{{info.is_check !== 4 && info.is_check !== 3}}" style="position: absolute;right:0;top:0%"
@@ -50,41 +62,10 @@
 			src="{{statusImageList[info.is_check]}}" />
 	</view>
 
-	<!-- 产品信息 -->
-	<view class="card fz28">
-		<view class="title">产品信息</view>
-		<view wx:for="{{info.production_plan_data}}">
-			<view class="flex mt10">
-				<view class="w30 color6">产品名</view>
-				<view class="w70 color27A2">
-					{{ item.product_code || item.system_code }}（{{ item.category }}/{{ item.secondary_category }}）
-				</view>
-			</view>
-			<view wx:for="{{item.product_data}}" wx:for-item="itemColor">
-				<view class="flex mt10">
-					<view class="w30 color6">尺码颜色</view>
-					<view class="w70">{{ itemColor.size_name }}/{{ itemColor.color_name }}</view>
-				</view>
-				<view wx:for="{{itemColor.info_data}}" wx:for-item="itemPart">
-					<view class="flex mt10">
-						<view class="w50 flex">
-							<view class="w60 color6">产品部位</view>
-							<view class="w40">{{ itemPart.part_name }}</view>
-						</view>
-						<view class="w50 flex">
-							<view class="w60 color6">计划生产</view>
-							<view class="w40">{{ itemPart.number }}</view>
-						</view>
-					</view>
-				</view>
-			</view>
-		</view>
-	</view>
-
 	<!-- 原料信息 -->
 	<view class="card fz28">
 		<view class="title">原料信息</view>
-		<view wx:for="{{materialPlanInfo}}">
+		<view wx:for="{{info.info_data}}">
 			<view class="flex mt10">
 				<view class="w30 color6">原料名称</view>
 				<view class="w70 color27A2">
@@ -92,51 +73,53 @@
 				</view>
 			</view>
 			<view class="flex mt10">
-				<view class="w30 color6">合计值</view>
-				<view class="w70">
-					{{ item.total_price }}{{ item.childrenMergeInfo[0].unit }}
-				</view>
-			</view>
-			<view wx:for="{{item.childrenMergeInfo}}" wx:for-item="itemChild">
-				<view class="flex mt10">
-					<view class="w50 flex">
-						<view class="w60 color6">颜色</view>
-						<view class="w40">{{ itemChild.material_color }}</view>
-					</view>
-					<view class="w50 flex">
-						<view class="w60 color6">数量</view>
-						<view class="w40">{{ itemChild.final_number }}{{ itemChild.unit }}</view>
+				<view class="flex w50">
+					<view class="w60 color6">调取颜色</view>
+					<view class="w40">
+						{{ item.material_color }}
 					</view>
 				</view>
-				<!-- <view class="flex mt10">
-					<view class="w30 color6">原样颜色</view>
-					<view class="w70 color27A2">
-						{{ item.material_name }}
+				<view class="flex w50">
+					<view class="w60 color6">调取属性</view>
+					<view class="w40">
+						{{ item.attribute }}
 					</view>
-				</view> -->
+				</view>
+			</view>
+			<view class="flex mt10">
+				<view class="w50 flex">
+					<view class="w60 color6">批/缸/色号</view>
+					<view class="w40">
+						{{ item.batch_code || '无' }}/{{ item.vat_code || '无' }}/{{ item.color_code || '无' }}
+					</view>
+				</view>
+				<view class="w50 flex">
+					<view class="w60 color6">调取单价</view>
+					<view class="w40">
+						{{ item.price || 0 }}元
+					</view>
+				</view>
+			</view>
+			<view class="flex mt10">
+				<view class="flex w50">
+					<view class="w60 color6">调取数量</view>
+					<view class="w40">
+						{{ item.number }}{{ item.unit }}
+					</view>
+				</view>
+				<view class="flex w50">
+					<view class="w60 color6">入库数量</view>
+					<view class="w40">
+						{{ item.final_push_number }}
+					</view>
+				</view>
 			</view>
 		</view>
-	</view>
-
-	<view class="card fz28">
-		<view class="title">其它信息</view>
-		<view class="flex mt10">
-			<view class="w30 color6">备注信息</view>
-			<view class="w70">
-				{{ info.desc || '无'}}
-			</view>
-		</view>
-		<!-- <view class="flex mt10">
-			<view class="w30 color6">注意事项</view>
-			<view class="w70 color27A2">
-				{{ info.desc || '无'}}
-			</view>
-		</view> -->
 	</view>
 
 	<view class="mt20 submit" style="position: fixed;bottom:3%;left:50%;transform: translateX(-50%);">
 		<view class="flex jcsa">
-			<van-button style="margin-left: 20px;" type="primary" size="small" bindtap="openCheck">审核计划单</van-button>
+			<van-button style="margin-left: 20px;" type="primary" size="small" bindtap="openCheck">审核调取单</van-button>
 		</view>
 	</view>
 
